# Hun

./: .gitignore  CMakeLists.txt  README.md  build-all.sh
Applications/: README.Rust.md
Applications/rust/hun_apps/: Cargo.toml
Applications/rust/hun_apps/hun_core/: Cargo.toml
Applications/rust/hun_apps/hun_core/src/: lib.rs
Applications/rust/hun_apps/hun_test_runner/: Cargo.toml  build.rs
Applications/rust/hun_apps/hun_test_runner/src/: lib.rs
Applications/rust/hun_apps/hun_text_runner/: Cargo.toml  build.rs
Applications/rust/hun_apps/hun_text_runner/src/: main.rs
Yana/: CMakeLists.txt  LICENSE
Yana/build-xcode/CMakeScripts/: ReRunCMake.make
Yana/build-xcode/Debug/: Yana
Yana/build-xcode/Debug/cargo/hun_core_84915/aarch64-apple-darwin/debug/.fingerprint/hun_core-710b7acfd693a8a9/: lib-hun_core.json
Yana/docs/: README.ARM64.md  README.CMD.md  README.HOTKEY.md  README.HUNMIN.MNEMONIC.md  README.INSTRUCTIONS.md  README.KO.md  README.LLVM.md  README.SNIPPETS.md
Yana/include/: fib.h  hun.macros.inc  section_macros.inc
Yana/libs/: bubble_sort.S  calc.S  chain.S  chains.S  dispatch.S  fib.S  hangul.S  playground.S  quick-sort.S  quick_sort.S  quicksort.S  readline.S  string_to_integer.S
Yana/libs/console/: console_line.S  console_writeline.S
Yana/libs/demo/: demo_ldrb.S  demo_madd.S
Yana/libs/examples/: menu_csel.S  menu_delegate.S  menu_exit.S  menu_forloop.S  menu_function_call.S  menu_getitems.S  menu_hanoi.S  menu_if_else.S  menu_loop_int.S  menu_welcome_rust.S
Yana/scripts/: build-unix.sh  build.sh  clean.sh
Yana/src/: Yana.S
Yana/tests/: test.S  test_add.S  test_array_sum.S  test_csel.S
Yeoji/: README.md  boot.S  build-run.sh  build.sh  func_table.S  gic.c  kernel.c  kernel.elf  link.ld  vectors.S  yeoji_section_macros.inc
dharma/: main.s
docs/: COMMIT_CONVENTION.md  README.Hun.md  README.LLVM.md
docs/encyclopedia/: README.Katex.md  README.Mermaid.md  README.StateDiagram.md  README.md
docs/encyclopedia/control-flow/: README.md
docs/encyclopedia/directives/: README.md
docs/encyclopedia/mnemonic/: LDRB.md  LSL.md  MSR_MRS.md
docs/patches/: hangul-lexer-support-part2.patch  hangul-lexer-support.patch  hangul-native-mnemonics-11.patch
hangul/: README.md  h.s  한글개벽
hun_apps/: Cargo.toml
hun_apps/src/: lib.rs
tools/hun-asm-highlighter/: .vscodeignore  DEVELOPMENT.md  README.md  hun-asm-highlighter-0.0.2.vsix  hun-asm-highlighter-0.0.3.vsix  hun-asm-highlighter-0.0.4.vsix  hun-asm-highlighter-0.0.5.vsix  hun-asm-highlighter-0.0.6.vsix  hun-asm-highlighter-0.0.8.vsix  hun-asm-highlighter-0.0.9.vsix  hun-asm-highlighter-0.1.0.vsix  language-configuration.json  package.json
tools/hun-asm-highlighter/releases/: hun-asm-highlighter-0.0.1.vsix  hun-asm-highlighter-0.0.7.vsix  hun-asm-highlighter-0.1.1.vsix  hun-asm-highlighter-0.1.2.vsix  hun-asm-highlighter-0.2.0.vsix  hun-asm-highlighter-0.2.1.vsix  hun-asm-highlighter-0.2.2.vsix  hun-asm-highlighter-0.2.3.vsix  hun-asm-highlighter-0.2.4.vsix  hun-asm-highlighter-0.2.5.vsix  hun-asm-highlighter-0.3.0.vsix  hun-asm-highlighter-1.1.0.vsix  hun-asm-highlighter-2.0.0.vsix  hun-asm-highlighter-2.0.1.vsix  hun-asm-highlighter-2.0.2.vsix  hun-asm-highlighter-2.1.0.vsix  hun-asm-highlighter-2.1.1.vsix  hun-asm-highlighter-2.1.2.vsix  hun-asm-highlighter-2.1.3.vsix  hun-asm-highlighter-2.1.4.vsix  hun-asm-highlighter-2.1.5.vsix
tools/hun-asm-highlighter/snippets/: hun-asm.code-snippets
tools/hun-asm-highlighter/src/: diagnostics.js  extension.js  mnemonic-info.js  mnemonics.js
tools/hun-asm-highlighter/src/data/: arm64-data.js
tools/hun-asm-highlighter/syntaxes/: hun-asm.tmLanguage.json
tools/yeoji-forest/: CHANGELOG.md  LICENSE  README.md  package.json  vsc-extension-quickstart.md
tools/yeoji-forest/themes/: Yeoji Forest-color-theme.json
